PQJiraInt1/src/objects/JIRA_Watcher__c.object
<CustomObject>
    <description>associate users with JIRA Issues</description>
    <fields>
        <fullName>Issues__c</fullName>
        <label>JIRACXIssue</label>
        <referenceTo>JIRACXIssue__c</referenceTo>
        <relationshipLabel>JIRA Watchers</relationshipLabel>
        <relationshipName>JIRA_Watchers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFUsers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce users watching this JIRA Issue</description>
        <inlineHelpText>Salesforce users watching this JIRA Issue</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JIRA_Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>useChatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Chatter notifications for JIRA issue updates</description>
        <inlineHelpText>Send Chatter notifications for JIRA issue updates</inlineHelpText>
        <label>useChatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>useEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send email notifications for JIRA issue updates</description>
        <inlineHelpText>Send email notifications for JIRA issue updates</inlineHelpText>
        <label>useEmail</label>
        <type>Checkbox</type>
    </fields>
    <label>JIRA Watcher</label>
    <nameField>
        <label>JIRA Watcher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRA Watchers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>